--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ExercicioSD
+application.vendor=Iago Rodrigues
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ExercicioSD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.postgresql-9.0-802.jdbc3.jar=G:\\postgresql-9.0-802.jdbc3.jar
+file.reference.postgresql-9.0-802.jdbc4.jar=G:\\postgresql-9.0-802.jdbc4.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.postgresql-9.0-802.jdbc3.jar}:\
+    ${file.reference.postgresql-9.0-802.jdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
